# SoundBridgeFx

./: .env_example  .gitignore  Dockerfile  Justfile  LICENSE  README.md  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt  startup.sh
.github/workflows/: cd.yml  ci.yml  version.yml
soundbridge/: webapp.py
soundbridgefx/: __init__.py  __init__py  __main__.py  backend.py  cvlc.py  cvlc_controller.py  ledfx.py  ledfx_controller.py  main.py  parser.py  raspotify.py  sonosspeaker.py  sonosspeakers.py  speaker_api.py  speakers.py  stream_api.py  web_backend.py
soundbridgefx/AbstractSpeaker/: speaker.py
soundbridgefx/Sonos/: controller.py  speaker.py
soundbridgefx/arguments/: parser.py
soundbridgefx/client/src/: App.svelte
soundbridgefx/json/: encoder.py
soundbridgefx/logging/: logging.py
soundbridgefx/metaclasses/: singleton.py
soundbridgefx/sonos/: controller.py  speaker.py
soundbridgefx/static_web/prerendered/pages/: ledfx.html  settings.html  stream.html
soundbridgefx/system/: ffmpeg.py  ledfx.py  raspotify.py
soundbridgefx/templates/: base.html  home.html
soundbridgefx/web/: main.py  speaker_api.py  web_backend.py
soundbridgefx/web/api/: speaker.py  stream.py
soundbridgefx/web/client/_app/: version.json
soundbridgefx/web/client/_app/immutable/: start-7b9b8907.js
soundbridgefx/web/client/_app/immutable/assets/: _page-ad402662.css  (+1 more)
soundbridgefx/web/prerendered/pages/: index.html  ledfx.html  settings.html  stream.html
web/: .gitignore  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js
web/src/lib/components/: BottomBar.svelte  SonosSpeakers.svelte  SonosSpeakersAccordion.svelte  TopBar.svelte
web/src/routes/: +error.svelte  +layout.js  +layout.svelte  +page.svelte
web/src/routes/ledfx/: +page.svelte
web/src/routes/stream/: +page.svelte
web/src/theme/: app.scss
web/static/: smui-dark.css  smui.css
(+47 files in other folders)
