[tool.poetry]
name = "soundbridge"
version = "0.1.0"
description = ""
authors = ["Martyn van Dijke <martijnvdijke600@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
soco = "^0.28.1"
flask = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
