[tool.poetry]
name = "soundbridgefx"
version = "0.2.0-beta"
description = ""
authors = ["Martyn van Dijke <martijnvdijke600@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/martynvdijke/SoundBridgeFx"

[tool.poetry.dependencies]
python = "^3.7"
soco = "^0.28.1"
flask = "^2.2.2"
ledfx = "^2.0.60"
argparse = "^1.4.0"
jsonpickle = "^3.0.1"
flask-cors = "^3.0.10"
soundcard = "^0.4.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^22.12.0"
flake8 = "^6.0.0"
mypy = "^0.991"
python-semantic-release = "^7.33.0"
python-dotenv = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
soundbridgefx = 'soundbridgefx.__main__:main'

[tool.semantic_release]
version_variable = [
    "soundbridgefx/__init__.py:__version__",
    "pyproject.toml:version"
]